--- a/SimpleHive/nbproject/project.properties
+++ b/SimpleHive/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/SimpleHive.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hadoop-core-1.2.1.jar=lib/hadoop-core-1.2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hadoop-core-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
