--- a/SimpleHive/nbproject/project.properties
+++ b/SimpleHive/nbproject/project.properties
@@ -30,13 +30,19 @@ dist.jar=${dist.dir}/SimpleHive.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-configuration-1.10.jar=lib/commons-configuration-1.10.jar
+file.reference.commons-lang-2.6.jar=lib/commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.hadoop-core-1.2.1.jar=lib/hadoop-core-1.2.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hadoop-core-1.2.1.jar}
+    ${file.reference.hadoop-core-1.2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-configuration-1.10.jar}:\
+    ${file.reference.commons-lang-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
