read only HDFS supported files added
added tests, which fail gracefully if no hdfs

--- a/SimpleHive/nbproject/project.properties
+++ b/SimpleHive/nbproject/project.properties
@@ -30,19 +30,41 @@ dist.jar=${dist.dir}/SimpleHive.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-cli-1.3.1.jar=lib/commons-cli-1.3.1.jar
+file.reference.commons-collections-3.2.2.jar=lib/commons-collections-3.2.2.jar
 file.reference.commons-configuration-1.10.jar=lib/commons-configuration-1.10.jar
 file.reference.commons-lang-2.6.jar=lib/commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
-file.reference.hadoop-core-1.2.1.jar=lib/hadoop-core-1.2.1.jar
+file.reference.guava-19.0.jar=lib/guava-19.0.jar
+file.reference.hadoop-auth-2.6.0.jar=lib/hadoop-auth-2.6.0.jar
+file.reference.hadoop-common-2.6.0.jar=lib/hadoop-common-2.6.0.jar
+file.reference.hadoop-hdfs-2.6.0.jar=lib/hadoop-hdfs-2.6.0.jar
+file.reference.hadoop-mapreduce-client-core-2.6.0.jar=lib/hadoop-mapreduce-client-core-2.6.0.jar
+file.reference.htrace-core-3.0.4.jar=lib/htrace-core-3.0.4.jar
+file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.log4j-core-2.5.jar=lib/log4j-core-2.5.jar
+file.reference.protobuf-java-2.6.1.jar=lib/protobuf-java-2.6.1.jar
+file.reference.slf4j-api-1.7.16.jar=lib/slf4j-api-1.7.16.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hadoop-core-1.2.1.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-configuration-1.10.jar}:\
-    ${file.reference.commons-lang-2.6.jar}
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.hadoop-common-2.6.0.jar}:\
+    ${file.reference.hadoop-mapreduce-client-core-2.6.0.jar}:\
+    ${file.reference.guava-19.0.jar}:\
+    ${file.reference.hadoop-hdfs-2.6.0.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.hadoop-auth-2.6.0.jar}:\
+    ${file.reference.log4j-core-2.5.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.7.16.jar}:\
+    ${file.reference.commons-cli-1.3.1.jar}:\
+    ${file.reference.protobuf-java-2.6.1.jar}:\
+    ${file.reference.htrace-core-3.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
