--- a/SimpleHive/pom.xml
+++ b/SimpleHive/pom.xml
@@ -7,7 +7,7 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
  
-    <name>Maven Quick Start Archetype</name>
+    <name>Simple Hive</name>
     <url>http://maven.apache.org</url>
   
     <build>  
@@ -37,11 +37,6 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>2.6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
         </dependency>
     </dependencies>
 </project>
