modified tests to not cause build to stop and to be more stable

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ SimpleHive/target/maven-status/maven-compiler-plugin/compile/default-compile/cre
 SimpleHive/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 
 SimpleHive/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+
+SimpleHive/nbactions.xml
