--- a/SimpleHive/pom.xml
+++ b/SimpleHive/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>2.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 </project>
