--- a/SimpleHive/pom.xml
+++ b/SimpleHive/pom.xml
@@ -4,7 +4,7 @@
  
     <groupId>com.toddbodnar.simplehive</groupId>
     <artifactId>simple-hive</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
  
     <name>Simple Hive</name>
